Hectortemplate now has columnCounter methods (@awoodbury)
Fix for issue 600: critical bug in CQL version selection (@malexejev)
Modify retryDownedHosts() to only delete hosts not in the ring if autoDiscoverHosts is true (@jancona)
Fix all hosts down check (@jancona)
don't use an iterator just to get item 0 of a List (@mebigfatguy)
Upgrade Cassandra dependencies to 1.2.11 (@pauloricardomg)

1.1-4
=====
The master branch has been moved to tracking 1.2.x (@patricioe and @thrykol)
Check for null or empty on CHC#setAutoDiscoveryDataCenter for safer config-driven setups (@zznate)
Add ability to specify columns for multiget queryColumns (Tom Martin)
Tokens now supported in getRangeSlices invocations (huge thanks to @horschi)
JavaDoc additions for configuration (@dmdevito)
updateKnownHosts in JMX actually does something now (@clohfink)
Fixed issue where all locks are release, but the wait run loop is still executing (@tnine)
Included endKey field in constructor of RangeSlicesIterator (@mebigfatguy)
Patch for issue #584: operateWithFailover fails against c* 1.2.1 when authentication is enabled (@jbojar)
Issue #594, handle SocketTimeoutException differently (Wei Zhu)
Added JMX counters for renewed idle and too long connections + added/modified tests (@dmdevito)
Added MultigetSliceIterator (@vinaykumarchella)
Updated DynamicComposite to override super's addComponent methods (@thrykol)

1.1-3
=====
Configurable ACK size in locking impl https://github.com/hector-client/hector/pull/551 @tnine
Bunch of stuff with Kerberos and related transport refactoring https://github.com/hector-client/hector/issues/565 @thobbs
deleteColumn in ColumnFamilyUpdater now respects clock https://github.com/hector-client/hector/pull/568 @memoleaf
Fix ClassNotFoundException when running from OSGi container https://github.com/hector-client/hector/pull/572 @amichair
Fix issue in hasNext with ColumnFamilyResultsIterator see https://github.com/hector-client/hector/issues/592 @ctcttest